--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Poetry'
 - !lcc 'PG'
+- GITenberg
 title: Moja Beatrice
 url: http://www.gutenberg.org/ebooks/27871
